# avangard_coinchecker

./: .env.template  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: .env.template  config.py  main.py
app/coinmarket/: coinmarketcap_api.py  models.py
